[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/NotoSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="ViewportTexture" id=2]
flags = 12
viewport_path = NodePath("SubtitleView")

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.9

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0 )

[node name="SubtitleUI" type="Sprite3D" parent="Camera"]
transform = Transform( 0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, -0.09, -0.299 )
cast_shadow = 0
opacity = 0.0
pixel_size = 0.0025
texture = SubResource( 2 )

[node name="Tween" type="Tween" parent="Camera/SubtitleUI"]

[node name="Timeout" type="Timer" parent="Camera/SubtitleUI"]
one_shot = true

[node name="ARVROrigin" type="ARVROrigin" parent="."]
visible = false

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
shape = SubResource( 1 )

[node name="SubtitleView" type="Viewport" parent="."]
size = Vector2( 2000, 800 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Center" type="CenterContainer" parent="SubtitleView"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Subtitles" type="Label" parent="SubtitleView/Center"]
margin_left = 799.0
margin_top = 90.0
margin_right = 1240.0
margin_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "All your base
All your base 2
All your base 3"
align = 1
valign = 2
max_lines_visible = 2

[connection signal="timeout" from="Camera/SubtitleUI/Timeout" to="." method="_on_SubtitleTimeout_timeout"]
